Closes #46 moving to Vite

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -3,4 +3,4 @@
 // Set the primary color for the theme
 $blue: #61dbfb;
 // Import Bootstrap and its default variables
-@import "~bootstrap/scss/bootstrap.scss";
+@import "bootstrap/scss/bootstrap.scss";
